force-app/main/default/objects/Estimate__c/Estimate__c.object-meta.xml
<CustomObject>
    <label>Estimate</label>
    <nameField>
        <label>Estimate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>