force-app/main/default/objects/Estimate__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>