force-app/main/default/objects/Estimate__c/fields/DerivedFromId__c.field-meta.xml
<CustomField>
    <fullName>DerivedFromId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Derived From</label>
    <referenceTo>Estimate__c</referenceTo>
    <relationshipLabel>Cloned Estimates</relationshipLabel>
    <relationshipName>ClonedEstimate</relationshipName>
    <type>Lookup</type>
</CustomField>