force-app/main/default/objects/Estimate__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductId</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Product</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Estimates</relationshipLabel>
    <relationshipName>ProductEstimates</relationshipName>
    <type>Lookup</type>
</CustomField>