force-app/main/default/objects/Estimate__c/fields/RateCardId__c.field-meta.xml
<CustomField>
    <fullName>RateCardId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Card</label>
    <referenceTo>RateCard__c</referenceTo>
    <relationshipLabel>Estimates</relationshipLabel>
    <relationshipName>Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>