force-app/main/default/objects/Estimate__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate Template</label>
    <referenceTo>EstimateTemplate__c</referenceTo>
    <relationshipLabel>Estimates</relationshipLabel>
    <relationshipName>Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>