force-app/main/default/objects/Estimate__c/fields/TotalLevelAdjustments__c.field-meta.xml
<CustomField>
    <fullName>TotalLevelAdjustments__c</fullName>
    <formula>SummaryId__r.TotalLevelAdjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Level Adjustments</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>